--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -380,6 +380,7 @@ jobs:
     - test-inspircd-anope
     - test-ircu2
     - test-limnoria
+    - test-nefarious
     - test-ngircd
     - test-ngircd-anope
     - test-ngircd-atheme
@@ -727,6 +728,43 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: pytest-results_limnoria_devel
+        path: pytest.xml
+  test-nefarious:
+    needs: []
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Checkout nefarious
+      uses: actions/checkout@v2
+      with:
+        path: nefarious
+        ref: master
+        repository: evilnet/nefarious2
+    - name: Build nefarious
+      run: |
+        cd $GITHUB_WORKSPACE/nefarious
+        ./configure --prefix=$HOME/.local/ --enable-debug
+        make -j 4
+        make install
+        cp $GITHUB_WORKSPACE/data/nefarious/* $HOME/.local/lib
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest pytest-xdist -r requirements.txt
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+        nefarious
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest-results_nefarious_devel
         path: pytest.xml
   test-ngircd:
     needs:
