--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -401,7 +401,7 @@ jobs:
     - name: Install dashboard dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install defusedxml
+        pip install defusedxml docutils -r requirements.txt
     - name: Generate dashboard
       run: |-
         shopt -s globstar
