--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -86,7 +86,7 @@ jobs:
     - name: Install dashboard dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install defusedxml
+        pip install defusedxml docutils -r requirements.txt
     - name: Generate dashboard
       run: |-
         shopt -s globstar
