--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -444,7 +444,7 @@ jobs:
     - name: Install dashboard dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install defusedxml
+        pip install defusedxml docutils -r requirements.txt
     - name: Generate dashboard
       run: |-
         shopt -s globstar
